force-app/main/default/objects/E_MOC_Record_type__c.object
<CustomObject>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_type_Id__c</fullName>
        <label>Record type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_name__c</fullName>
        <label>Running name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>E-MOC Record type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>E-MOC Record type  Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>